--- a/style.css
+++ b/style.css
@@ -49,9 +49,11 @@ body {
     width: 80%;
   }
 
-  .text-box {
-    margin: auto;
+  textarea {
     width: 100%;
+    height: 100px; 
+    box-sizing: border-box;
+
   }
   
   body > main > section > div {
